# space-hackathon

./: .dockerignore  .gitignore  AI_FEATURES_README.md  AI_INTEGRATION_SUMMARY.md  AI_MODELS_FOR_SPACE_CLASSIFICATION.md  ANNOTATION_AI_FLOWCHART.md  ANNOTATION_CLIP_CLASSIFICATION.md  CLIP_AI_ENABLED.md  CLIP_DETECTION_READY.md  CLIP_FIXED_READY.md  CLIP_INTEGRATION_COMPLETE.md  CLIP_TROUBLESHOOTING.md  COMMANDS.md  CONTRIBUTING.md  DATASET_UPGRADE.md  DEBUG_SNIPPETS.md  DEPLOYMENT.md  DETECTION_CONTROLS.md  HIGH_QUALITY_SNIPPET_FEATURE.md  INTEGRATION_COMPLETE.md  ISSUE_RESOLUTION.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_START.md  README.md  SECURITY.md  SERVICES_READY.md  SNIPPET_TOGGLE_FEATURE.md  SPEED_OPTIMIZATIONS.md  START_ALL_SERVICES.bat  START_SERVICES.md  STATUS.md  TEST_CAT_DETECTION.md  UNIVERSAL_DETECTION_AND_THUMBNAILS.md  healthcheck.ps1  healthcheck.sh  package.json  pnpm-lock.yaml  (+14 more)
ai/: AI_FEATURES_QUICKSTART.md  ARCHITECTURE.md  MISHA_AI_TASKS.md  MISHA_CHECKLIST.md  PLATFORM_INTEGRATION.md  QUICK_START_MISHA.md  README.md  STARTUP.md  START_DEMO.bat  app.py  build_index.py  build_real_index.py  onetime_query.txt  quick_demo.py  requirements.txt  (+7 more)
apps/api/: Makefile  package.json  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  seed.py  tile_processor.py
apps/api/app/middleware/: __init__.py  audit.py  security.py
apps/api/app/routers/: annotations.py  auth.py  classify.py  datasets.py  detect.py  features.py  overlays.py  search.py  tiles.py  uploads.py
(+58 files in other folders)
